# oarbots

./: .gitignore  LICENSE.md  README.md  packages.repos  robot_description.txt
.github/workflows/: build-dockerfile.yaml  ci.yaml  lint.yaml  test.yaml
docker/: Dockerfile
docs/: installation.md
docs/installation/: dingo_computer.md  dingo_helper_laptop.md  drivers_install.md  oarbot_silver_helper_laptop_launch.service  oarbot_silver_helper_laptop_launch.sh  robot.yaml  xorg-headless.conf  xorg-headless.service
scripts/: install-azure-kinect-drivers.sh
src/dingo_bringup/: CMakeLists.txt  package.xml
src/dingo_bringup/etc/: clearpath-platform-service-append.txt
src/dingo_bringup/launch/: dingo_launch.py
src/dingo_bringup/script/: dingo_bringup.sh
src/dingo_teleop/: CMakeLists.txt  package.xml
src/dingo_teleop/launch/: teleop_launch.py
src/dingo_teleop/src/: dingo_teleop.cpp
src/dingo_tf_relay/: CMakeLists.txt  package.xml
src/dingo_tf_relay/include/dingo_tf_relay/: dingo_tf_relay.hpp
src/dingo_tf_relay/launch/: dingo_tf_relay_launch.py
src/dingo_tf_relay/src/: dingo_tf_relay.cpp
src/joint_state_renamer/: CMakeLists.txt  package.xml
src/joint_state_renamer/include/joint_state_renamer/: joint_state_renamer.hpp
src/joint_state_renamer/launch/: joint_state_renamer.launch.py
src/joint_state_renamer/src/: joint_state_renamer.cpp
src/kinova_teleop/: CMakeLists.txt  package.xml
src/kinova_teleop/launch/: teleop_launch.py
src/kinova_teleop/src/: kinova_teleop.cpp
src/oarbot_description/: CMakeLists.txt  package.xml
src/oarbot_description/control/clearpath/do100/: empty.yaml  omni_4wd.yaml
src/oarbot_description/meshes/bota_systems/adapter/: gripper_adapter.STL  mounting.STL
src/oarbot_description/meshes/custom/: pvc_riser.STL  pvc_riser_aruco_mount.STL  pvc_riser_uwb_mount.STL  wrist_connection.STL
src/oarbot_description/urdf/: oarbot_blue.urdf.xacro  oarbot_silver.urdf.xacro
src/oarbot_description/urdf/bota_systems/: BFT_ROKS_KINOVA.urdf.xacro  BFT_ROKS_SER_M8.urdf.xacro
src/oarbot_description/urdf/clearpath/: common.urdf.xacro  robot.urdf.xacro
src/oarbot_description/urdf/clearpath/do100/: do100.urdf.xacro
src/oarbot_description/urdf/clearpath/do100/attachments/: top_plate.urdf.xacro
src/oarbot_description/urdf/clearpath/do100/drivetrain/: wheels.urdf.xacro
src/oarbot_description/urdf/clearpath/do100/drivetrain/wheels/: mecanum.urdf.xacro
src/oarbot_description/urdf/clearpath/generic/: empty.urdf.xacro  gazebo.urdf.xacro
src/oarbot_description/urdf/clearpath/generic/drivetrain/: drivetrain.urdf.xacro
src/oarbot_description/urdf/clearpath/generic/drivetrain/control/: diff_4wd.urdf.xacro  diff_fwd.urdf.xacro  diff_rwd.urdf.xacro  omni_4wd.urdf.xacro
src/oarbot_description/urdf/custom/: kinect_wrist_connection.urdf.xacro  robot_arm_riser.urdf.xacro  u_bracket.urdf.xacro  uwb_tag.urdf.xacro
src/oarbot_description/urdf/hokuyo/: hokuyo_ust.urdf.xacro
src/oarbot_description/urdf/kinova/: j2n6s300_with_force_torque.urdf.xacro  j2n6s300_with_force_torque_standalone.xacro  kinova_common.xacro  kinova_finger_set.xacro
src/oarbot_description/urdf/microsoft/: azure_kinect.urdf.xacro
src/oarbot_description/urdf/microstrain/: microstrain_imu.urdf.xacro
src/oarbot_launch/: CMakeLists.txt  package.xml
src/oarbot_launch/launch/: azure_kinect_bringup.launch.py  kinova_bringup.launch.py  oarbot_silver_helper_laptop.launch.py  oarbot_state_publisher.launch.py
src/oarbot_silver_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/oarbot_silver_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  oarbot_silver.ros2_control.xacro  oarbot_silver.srdf  oarbot_silver.urdf.xacro  ros2_controllers.yaml
src/oarbot_silver_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/tf_relay/: CMakeLists.txt  package.xml
src/tf_relay/include/tf_relay/: tf_relay.hpp
src/tf_relay/launch/: tf_relay.launch.py
src/tf_relay/src/: tf_relay.cpp
